--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>   
         <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
+            <img src="assets/images/logo.png" alt="Logo do site Wikipedia" width="200"/>
         </div>
     </header>
 
